# Proyecto11_ComputerVision_Equipo3

./: .env.example  .gitignore  KANBAN.md  README.md  docker-compose.yml  main.py  pyproject.toml
database/: schema.sql
docs/: data_contract.md  dataset.md  modelo-V2.md
models/: modelo.md
models/logo-detection-medium/: args.yaml  results.csv
models/logo-detection-v1/: args.yaml
models/logo-detection-v1-2/: args.yaml
models/logo-detection-v1-3/: args.yaml  results.csv
notebooks/: eda_dataset_V2.ipynb  training_yolo_V2.ipynb
services/backend/: .dockerignore  Dockerfile  pyproject.toml
services/backend/app/: main.py  test_persistencia.py
services/backend/app/api/: videos.py
services/backend/app/db/: connection.py  crud.py  init_db.py
services/backend/app/inference/: detector.py  video_processor.py
services/backend/app/models/: database_models.py
services/backend/app/storage/: file_manager.py
services/frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package-lock.json.bak  package.json  tailwind.config.js
services/frontend/src/: App.jsx  index.css  main.jsx
services/frontend/src/components/: ApiStatus.jsx  BrandCard.jsx  BrandChart.jsx  BrandTimeline.jsx  DetectionsTable.jsx  ImagePreview.jsx  KpiCard.jsx  Layout.jsx  ProgressBar.jsx  ThemeToggle.jsx  UploadZone.jsx  VideoHistoryTable.jsx  VideoPlayerWithDetections.jsx
services/frontend/src/pages/: HistoryPage.jsx  ImagePage.jsx  ReportPage.jsx  UploadPage.jsx
services/frontend/src/services/: api.js
services/frontend/src/utils/: report.js
src/data/: download_dataset-V3.py
training/: download_dataset.py  pyproject.toml  train.py  train_yolov8.py  upload_model.py  verify_dataset.py
