[project]
name = "proyecto11-computervision-equipo3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "ipykernel>=7.3.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "roboflow>=1.3.10",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "ultralytics>=8.4.70",
    "uvicorn>=0.49.0",
]
