[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "roboflow>=1.3.10",
    "ultralytics>=8.4.75",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
