[project]
name = "training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.20.1",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "roboflow>=1.3.10",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.4.75",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
