[project]
name = "backend"
version = "0.1.0"
description = "Logo detection backend API"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "ultralytics>=8.0.0",
    "huggingface-hub>=0.20.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
